# onchain-index

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  README.md  pyproject.toml
.engineer/: progress.md
agent_docs/: cron_failure_recovery.md  repo_map.md  secrets.md
briefs/2026-05-28/: onchain.md
briefs/2026-06-01/: onchain.md
briefs/2026-06-02/: onchain.md
briefs/2026-06-09/: onchain.md
briefs/2026-06-16/: onchain.md
briefs/2026-06-22/: onchain.md
briefs/2026-06-28/: onchain.md
briefs/2026-06-29/: onchain.md
briefs/2026-07-06/: onchain.md
briefs/2026-07-15/: onchain.md
docs/: architecture.md  dashboard.html  index.html  theory.md
outputs/: dashboard.html
reports/: phase-b-indicator-audit-2026-05-20.md  phase-c-composite-2026-05-20.md  phase-d-audit-2026-05-21.md  phase-d-optimization-2026-05-21.md  phase-e-exchange-flow-2026-05-21.md  phase-f-tier-structure-2026-05-21.md  phase-g-asymmetric-override-2026-05-28.md  phase-h-spine-candidates-2026-05-28.md  phase-i-blended-spines-2026-05-28.md  phase-j-duration-magnitude-2026-05-28.md  phase-k-pure-rerun-2026-05-28.md  phase-l-holder-btceq-combinations-2026-05-28.md  phase-m-stickiness-2026-05-28.md  phase-n-euphoria-overlay-2026-05-28.md  phase-o-confirmation-rules-2026-05-28.md  phase-p-tier-confirmation-2026-05-28.md
scripts/: brief_weekly.sh  com.milkroad.onchain-index-docs-serve.plist  com.milkroad.onchain-index-refresh-daily.plist  com.milkroad.onchain-index-serve.plist  refresh.sh
tests/: test_backtest.py  test_build.py  test_composite.py  test_optimization.py  test_smoke.py
(+37 files in other folders)
